# homeshell

./: .gitignore  .gitmodules  CMAKE_TARGETS_SUMMARY.md  CMakeLists.txt  DOCUMENTATION_STATUS.md  README.md  rebuild.sh
.github/workflows/: binary-stats.yml  ci.yml  deploy-pages.yml
config/: .clang-format  .clang-tidy  homeshell.json
docs/: BUILD_TARGETS.md
include/homeshell/: ColorHelper.hpp  Command.hpp  Config.hpp  EncryptedMount.hpp  FileDatabase.hpp  FilesystemHelper.hpp  Homeshell.hpp  IcmpPing.hpp  OutputRedirection.hpp  PasswordInput.hpp  PipelineExecutor.hpp  PromptFormatter.hpp  Shell.hpp  Status.hpp  TerminalInfo.hpp  VirtualFilesystem.hpp  version.h.in
include/homeshell/commands/: AcpiInfoCommand.hpp  Base64Command.hpp  CatCommand.hpp  CdCommand.hpp  ChmodCommand.hpp  CpCommand.hpp  CpuInfoCommand.hpp  CurlCommand.hpp  DateTimeCommand.hpp  DfCommand.hpp  DiffCommand.hpp  DuCommand.hpp  EchoCommand.hpp  EditCommand.hpp  ExitCommand.hpp  FileCommand.hpp  FindCommand.hpp  FreeCommand.hpp  GrepCommand.hpp  HeadCommand.hpp  HelpCommand.hpp  HostnameCommand.hpp  KillCommand.hpp  LessCommand.hpp  LnCommand.hpp  LocateCommand.hpp  LsCommand.hpp  LsblkCommand.hpp  LspciCommand.hpp  LsusbCommand.hpp  Md5sumCommand.hpp  MkdirCommand.hpp  MountCommand.hpp  MvCommand.hpp  PingCommand.hpp  PsCommand.hpp  PwdCommand.hpp  PythonCommand.hpp  RmCommand.hpp  Sha256sumCommand.hpp  (+17 more)
include/miniz_compat/: miniz_export.h
scripts/: generate-stats.sh
src/: EncryptedMount.cpp  FileDatabase.cpp  Homeshell.cpp  OutputRedirection.cpp  PipelineExecutor.cpp  VirtualFilesystem.cpp  main.cpp  micropython_port.c
src/commands/: ChmodCommand.cpp  FindCommand.cpp  PythonCommand.cpp  VersionCommand.cpp
stats/: composition.txt  index.html  ldd.txt  readelf.txt  sections.txt  top-symbols.txt
tests/: CMakeLists.txt  test_acpi_info_command.cpp  test_archive_commands.cpp  test_cat_command.cpp  test_config.cpp  test_cp_mv_ln.cpp  test_cpu_info_command.cpp  test_df_command.cpp  test_du_command.cpp  test_encrypted_mount.cpp  test_filesystem_helper.cpp  test_find_command.cpp  test_grep_command.cpp  test_hostname_uptime_free_head_wc.cpp  test_less_command.cpp  test_locate_commands.cpp  test_ls_command.cpp  test_mkdir_touch_rm_commands.cpp  test_output_redirection.cpp  test_prompt_formatter.cpp  test_ps_tar_curl.cpp  test_sha256_md5_base64.cpp  test_status.cpp  test_sysinfo_commands.cpp  test_system_commands.cpp  test_tail_command.cpp  test_tee_diff.cpp  test_tree_command.cpp  test_utility_commands.cpp  test_virtual_filesystem.cpp
